--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ajean757.github.io/ajean-portfolio",
+  "homepage": "https://ajean757.github.io/ajean757.github.io",
   "name": "ajean-portfolio",
   "version": "0.1.0",
   "private": true,
